schema/testdata/validation_set_attribute_built_in_fields/schema.keel
model Post {
    fields {
        name Text?
        published Boolean?
        publisher Publisher?
        identity Identity? @unique
    }

    actions {
        create createPost() with (name, published) {
            @set(post.createdAt = ctx.now)
            @set(post.updatedAt = ctx.now)
        }
        create createPost2() with (name, published, publisher.name) {
            @set(post.publisher.createdAt = ctx.now)
            @set(post.publisher.updatedAt = ctx.now)
        }
        update updatePost(id) with (name, published) {
            @set(post.createdAt = ctx.now)
            @set(post.updatedAt = ctx.now)
        }
        update updatePost2(id) with (name, published) {
            @set(post.publisher.createdAt = ctx.now)
            @set(post.publisher.updatedAt = ctx.now)
        }
    }
}

model Publisher {
    fields {
        name Text
    }
}